tests/ui/subcommand_and_flatten.stderr
error: proc-macro derive panicked
  --> $DIR/subcommand_and_flatten.rs:11:10
   |
11 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: subcommands cannot be flattened
